# opr-exam-solutions

./: .gitignore  CMakeLists.txt  README.md  build.sh
.github/workflows/: check-buildable.yml
sandbox/: main.cpp
ss13/aufgabe3_2/: main.cpp
ss13/aufgabe3_3/: main.cpp
ss13/aufgabe3_4/: main.cpp
ss14/aufgabe2/: main.cpp
ss16/aufgabe1_1/: main.cpp
ss16/aufgabe1_2/: main.cpp
ss16/aufgabe1_3/: main.cpp
ss16/aufgabe1_4/: main.cpp
ss16/aufgabe2_1/: main.cpp
ss16/aufgabe2_2/: Float.cpp  Float.h  Logger.h  LoggerImpl.h  main.cpp
ss16/aufgabe3/: B.h
ss17/aufgabe2_1/: main.cpp
ss17/aufgabe2_2/: main.cpp
ss17/aufgabe2_3/: main.cpp
ss17/aufgabe3/: A.h  B.h
ss17/aufgabe4_1/: Ausnahme.h  Matrix.h  matrix.cpp
ss17/aufgabe4_2/: Koerper.h  Koerper2D.h  Koerper3D.h  Rechteck.h  Wuerfel.h  main.cpp
ss18/aufgabe2_3/: main.cpp
ss18/aufgabe3_1/: Komplex.h  main.cpp
ss18/aufgabe3_2/: main.cpp
ss18/aufgabe3_3/: main.cpp
ss19/aufgabe2_1/: main.cpp
ss19/aufgabe2_2/: main.cpp
ss19/aufgabe2_3/: main.cpp
ss19/aufgabe2_4/: main.cpp
ss19/aufgabe3_1/: main.cpp
ss19/aufgabe3_2/: main.cpp
ss22/aufgabe2_1/: main.cpp
ss22/aufgabe2_2/: main.cpp
ss22/aufgabe2_3/: main.cpp
ss22/aufgabe2_4/: main.cpp
ws11_12/aufgabe2/: main.cpp
ws15/aufgabe2_1/: main.cpp
ws15/aufgabe2_2/: main.cpp
ws15/aufgabe2_3/: main.cpp
ws15/aufgabe2_4/: main.cpp
ws15/aufgabe3_1/: main.cpp
ws15/aufgabe3_2/: main.cpp
